<resources>
    <string name="app_name">Apex</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_nav">MainActivityNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_users__maps_activity">Map</string>
    <string name="title_activity_users__f_ind__location">Map</string>

    <!-- me string resource-->
    <string name="online_text">online</string>
    <string name="offline_text">offline</string>
    <string name="Repost_deleted">Repost deleted</string>
    <string name="Your_email">Your email</string>
    <string name="Your_password">Your password</string>
    <string name="Password_again">Password again</string>
    <string name="Your_name">Your name</string>
    <string name="Log_in">Log in</string>
    <string name="Or_Sign_Up">Or Sign Up</string>
    <string name="Forgot_pass">Forgot pass?</string>
    <string name="Name">Name</string>
    <string name="minutes">minutes</string>
    <string name="title">Title</string>
    <string name="the_description_of_the_post">The description of the post</string>
    <string name="_100_likes">100 Likes</string>
    <string name="_100_comments">100 Comments</string>
    <string name="liked">Liked</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="postimageincomment">postImageInComment</string>
    <string name="sendcommentpost">SendCommentPost</string>
    <string name="_20_04_2021">20/04/2021</string>
    <string name="comment_there">comment there</string>
    <string name="postdialog">postDialog</string>
    <string name="Liked">Liked</string>
    <string name="Like">Like</string>
    <string name="chooseimageincreatepost">chooseImageInCreatePost</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="publish">Publish</string>
    <string name="change">Change</string>
    <string name="like">like</string>
    <string name="hide_text">--</string>
    <string name="last_message">Last message :</string>
    <string name="day">day</string>
    <string name="time">time</string>
    <string name="blockedanotheruser">blockedAnotherUser</string>
    <string name="youblockedbyanotheruser">youBlockedByAnotherUser</string>
    <string name="addrequestforfriends">addRequestForFriends</string>
    <string name="acceptanotherusertofriend">acceptAnotherUserToFriend</string>
    <string name="update">update</string>
    <string name="telephone">Telephone</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="no_songs">No Songs</string>
    <string name="no_posts">No Posts</string>
    <string name="imageinpager">imageInPager</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="description">Description</string>
    <string name="price">price</string>
    <string name="order_information">Order information</string>
    <string name="order_for">Order for :</string>
    <string name="staff">Staff :</string>
    <string name="number">Number :</string>
    <string name="price_for_one">Price For one :</string>
    <string name="full_pice">Full Price :</string>
    <string name="send_email">Send Email</string>
    <string name="send_by_messenger">Send by Messenger</string>
    <string name="call_to_support">Call to support</string>
    <string name="you_also_can">You also can :</string>
    <string name="find_out_the_geolocation">Find out the Geolocation</string>
    <string name="bell">Bell</string>
    <string name="workout">Workout</string>
    <string name="kino">Kino</string>
    <string name="location">Location</string>
    <string name="player">Player</string>
    <string name="hq">HQ</string>
    <string name="_00_00">00:00</string>
    <string name="last_title">last title</string>
    <string name="main_title">Main title</string>
    <string name="friends">friends</string>
    <string name="add_any_post_or_add_friends">Add any post or add friends!</string>
    <string name="no_message">No message</string>

    <!-- TODO: Post_Friends_Activity -->
    <string name="show_new_posts">Show new posts</string>
    <string name="add_posts_floating_btn">Add_Posts_Floating_Btn</string>
    <string name="recommendations">recommendations</string>
    <string name="From_friends">from friends</string>

    <!-- TODO: Post_CommentActivity -->
    <string name="no_comments">No comments</string>
    <string name="your_comment">your comment</string>

    <!-- TODO: Show_Image_Activity-->
    <string name="show_image">Show Image</string>
    <string name="save">Save</string>

    <!-- TODO: Sing_in_activity-->
    <string name="logIn">Log in</string>
    <string name="Or_Log_in">Or Log in</string>
    <string name="register">Register</string>
    <string name="new_account">New account</string>

    <!-- TODO: Finds_Location-->
    <string name="find_nearest_user">Find nearest user</string>
    <string name="find_selected_user">Find selected user</string>
    <string name="finding_location">Finding location..</string>
    <string name="Distance">\"Distance - \"</string>
    <string name="m">m</string>

    <!-- TODO: Dashboard-->
    <string name="no_search">No search history</string>
    <string name="offers_of_the_day">Offers of the day</string>
    <string name="nameForOrder">Input bonus code</string>
    <string name="minsk">Minsk</string>
    <string name="your_city">Your City</string>
    <string name="temp">Temp</string>
    <string name="notes">Notes</string>

    <!-- TODO: Notes-->
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <!-- TODO: Add_Music-->
    <string name="song_main_title">Song main title</string>
    <string name="song_last_title">Song last title</string>
    <string name="choose_song">Choose song</string>
    <string name="no_file_selected">No file selected</string>
    <string name="choose_album">Choose album</string>
    <string name="upload_treck">Upload treck</string>
    <string name="server_limit_reached">Server Limit Reached</string>

    <!-- TODO: Chat-->
    <string name="texting_to_you">texting to you …</string>
    <string name="refresh">refresh</string>
    <string name="name">Name</string>
    <string name="online">Online</string>
    <string name="your_message">Your message…</string>
    <string name="press_send_to_repost">Press send to repost</string>
    <string name="send">send</string>


    <!-- TODO: Chat_Bubble -->
    <string name="postname">PostName</string>
    <string name="postdescription">PostDescription</string>
    <string name="day_of_message">day of message</string>
    <string name="time_of_message">time of message</string>
    <string name="textvew">TextVew</string>
    <string name="deleted_message">deleted Message</string>
    <string name="text">text</string>

    <!-- TODO: Kino_Search_Info -->
    <string name="search">Search</string>

    <!-- TODO: row_Kino -->
    <string name="year">Year</string>
    <string name="type">Type</string>
    <string name="title_second">Title :</string>
    <string name="year_second">Year :</string>
    <string name="type_second">Type :</string>

    <!-- TODO: row_Member-->
    <string name="first_name">First name :</string>
    <string name="last_name">Last name :</string>
    <string name="sport">Sport :</string>
    <string name="age">Age :</string>
    <string name="time_workout">Time :</string>
    <string name="w_n">W/n :</string>
    <string name="w_t">W/t :</string>

    <!-- TODO: user_Profile-->
    <string name="nick">Nick</string>
    <string name="offline">offline</string>
    <string name="posts">Posts</string>
    <string name="tracks">Tracks</string>

    <!-- TODO: WorkOut-->
    <string name="main_information">Main information :</string>
    <string name="first_name_mem_act">First Name :</string>
    <string name="first_name_mem_ac">First Name</string>
    <string name="last_name_mem_act">Last Name :</string>
    <string name="last_name_mem_ac">Last Name</string>
    <string name="gender">Gender</string>
    <string name="group">Group :</string>
    <string name="group_2">Group</string>
    <string name="extra_information">Extra information :</string>
    <string name="time_mem">Time :</string>
    <string name="time_mem_sec">Time</string>
    <string name="weight_now">Weight now :</string>
    <string name="your_weight_now">Your weight now</string>
    <string name="weight_target">Weight target :</string>
    <string name="your_weight_target">Your weight target</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_json">Json</string>

    <!-- TODO: BottomSheetDialog in Add_Change_Post -->
    <string name="select_images">Select images</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- TODO: BottomSheetDialog in Add_Change_Post -->
    <string name="number_selected">number selected</string>
    <string name="back">Close</string>
    <string name="ready">Ready</string>
    <string name="select_one">Select one</string>

</resources>