<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/posterImageView"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleKino"
            android:layout_below="@+id/posterImageView"
            android:layout_marginStart="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/yearKino"
            android:layout_below="@+id/titleKino"
            android:layout_marginStart="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/typeKino"
            android:layout_marginStart="55dp"
            android:layout_below="@+id/yearKino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posterImageView"
            android:text="@string/title_second"
            android:layout_marginStart="5dp"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleKino"
            android:text="@string/year_second"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yearKino"
            android:text="@string/type_second"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>