<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="#19979696"
    tools:context=".main.Screens.DB_Activities.Workout_SQL.Workout_Add_Member_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="300dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/main_information"
            android:textColor="#000000"
            android:textSize="26sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first_name_mem_act"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"/>

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:hint="@string/first_name_mem_ac"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_name_mem_act"
                    android:textColor="#000000"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:hint="@string/last_name_mem_ac"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/group"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/sportEditText"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:hint="@string/group_2"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/ageEditText"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="Your age"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/extra_information"
            android:textColor="#000000"
            android:textSize="26sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_mem"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/timeEditText"
                    android:textColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:hint="@string/time_mem_sec"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight_now"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/wNowEditText"
                    android:textColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/your_weight_now"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:text="@string/weight_target"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/wtarEditText"
                    android:textColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/your_weight_target"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>